--- a/style.css
+++ b/style.css
@@ -59,5 +59,6 @@ html, body {
   width: 100%;
 
   z-index: -1;
-  background-color: #F9DEC9;
+  /* background-color: #F9DEC9; */
+  background: linear-gradient(to bottom right, #F9DEC9, #Fe3145);
 }
