--- a/style.css
+++ b/style.css
@@ -62,3 +62,7 @@ html, body {
   /* background-color: #F9DEC9; */
   background: linear-gradient(to bottom right, #F9DEC9, #Fe3145);
 }
+
+img {
+  border-radius: 50%;
+}
